# ChangeLog for x11-themes/gtk-engines-xfce
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.167 2014/06/24 22:19:41 mgorny Exp $

  24 Jun 2014; Michał Górny <mgorny@gentoo.org>
  gtk-engines-xfce-3.0.1-r201.ebuild:
  Lower dev-libs/glib dep to first known EAPI=5 version, requested by Funtoo for
  GNOME 3.6.

  18 Jun 2014; Michał Górny <mgorny@gentoo.org>
  gtk-engines-xfce-3.0.1-r201.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

*gtk-engines-xfce-3.0.1-r201 (14 May 2014)

  14 May 2014; Michał Górny <mgorny@gentoo.org>
  +gtk-engines-xfce-3.0.1-r201.ebuild:
  Enable multilib support.

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  gtk-engines-xfce-3.0.1-r200.ebuild, gtk-engines-xfce-3.0.1-r300.ebuild:
  EAPI5

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  -gtk-engines-xfce-3.0.0-r200.ebuild, -gtk-engines-xfce-3.0.0-r201.ebuild,
  -gtk-engines-xfce-3.0.0-r300.ebuild,
  -files/gtk-engines-xfce-3.0.0-destroy_gradient.patch:
  old

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  gtk-engines-xfce-3.0.1-r200.ebuild, gtk-engines-xfce-3.0.1-r300.ebuild:
  alpha/hppa/ia64/ppc/ppc64/sparc stable wrt #429484

  19 Nov 2012; Markus Meier <maekke@gentoo.org>
  gtk-engines-xfce-3.0.1-r300.ebuild:
  arm stable, bug #429484

  19 Nov 2012; Markus Meier <maekke@gentoo.org>
  gtk-engines-xfce-3.0.1-r200.ebuild:
  arm stable, bug #429484

  16 Nov 2012; Andreas Schuerch <nativemad@gentoo.org>
  gtk-engines-xfce-3.0.1-r200.ebuild, gtk-engines-xfce-3.0.1-r300.ebuild:
  x86 stable, see bug 429484

  27 Oct 2012;  <ago@gentoo.org> gtk-engines-xfce-3.0.1-r300.ebuild:
  Stable for amd64, wrt bug #429484

  27 Oct 2012; <ago@gentoo.org> gtk-engines-xfce-3.0.1-r200.ebuild:
  Stable for amd64, wrt bug #429484

*gtk-engines-xfce-3.0.1-r300 (04 Oct 2012)
*gtk-engines-xfce-3.0.1-r200 (04 Oct 2012)
