@@ -1,26 +1,22 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/gtk-engines-xfce-3.0.1-r201.ebuild,v 1.4 2014/12/23 16:14:41 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/gtk-engines-xfce-3.0.1-r301.ebuild,v 1.1 2014/12/23 16:14:41 mgorny Exp $
 
 EAPI=5
 MY_PN=gtk-xfce-engine
 inherit xfconf multilib-minimal
 
-DESCRIPTION="A port of Xfce engine to GTK+ 2.x"
+DESCRIPTION="A port of Xfce engine to GTK+ 3.x"
 HOMEPAGE="http://www.xfce.org/projects/"
 SRC_URI="mirror://xfce/src/xfce/${MY_PN}/${PV%.*}/${MY_PN}-${PV}.tar.bz2"
 
 LICENSE="GPL-2"
-SLOT="0"
+SLOT="3"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x86-solaris"
 IUSE="debug"
 
-RDEPEND=">=dev-libs/glib-2.34.3[${MULTILIB_USEDEP}]
-	>=x11-libs/gtk+-2.24.23:2[${MULTILIB_USEDEP}]
-	abi_x86_32? (
-		!<=app-emulation/emul-linux-x86-gtklibs-20140508
-		!app-emulation/emul-linux-x86-gtklibs[-abi_x86_32(-)]
-	)"
+RDEPEND=">=dev-libs/glib-2.24[${MULTILIB_USEDEP}]
+	>=x11-libs/gtk+-3.2:3[${MULTILIB_USEDEP}]"
 DEPEND="${RDEPEND}
 	virtual/pkgconfig[${MULTILIB_USEDEP}]"
 
@@ -28,7 +24,7 @@ S=${WORKDIR}/${MY_PN}-${PV}
 
 pkg_setup() {
 	XFCONF=(
-		--disable-gtk3
+		--disable-gtk2
 		$(xfconf_use_debug)
 		)
 
