@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gtk-engines-xfce
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.167 2014/06/24 22:19:41 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.168 2014/12/23 16:14:41 mgorny Exp $
+
+*gtk-engines-xfce-3.0.1-r301 (23 Dec 2014)
+
+  23 Dec 2014; Michał Górny <mgorny@gentoo.org>
+  +gtk-engines-xfce-3.0.1-r301.ebuild, gtk-engines-xfce-3.0.1-r201.ebuild:
+  Port gtk+-3 version. Fix missing MULTILIB_USEDEP on pkgconfig.
 
   24 Jun 2014; Michał Górny <mgorny@gentoo.org>
   gtk-engines-xfce-3.0.1-r201.ebuild:
